<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bytecoders.iptvservice.mobileconfig.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bytecoders.iptvservice.mobileconfig.ui.dashboard.ChannelListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_channel_list">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_channel_detail"
            app:destination="@id/navigation_channel_detail" />
...
