...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <Button
                                    android:id="@+id/download_list"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/button_margin"
                                    android:layout_weight="1"
                                    android:onClick="@{() -> viewmodel.downloadList()}"
                                    android:text="@string/download" />
...
